deleted unnecessary sections and customize the template

--- a/single-portfolio.html
+++ b/single-portfolio.html
@@ -29,7 +29,7 @@
 
             <!-- Brand -->
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <h2>Coral</h2>
+                <!-- <h2>Coral</h2> -->
             </a>
 
             <!-- Toggler -->
@@ -48,7 +48,7 @@
                             Home
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="index.html#feature">
                             Features
                         </a>
@@ -62,18 +62,18 @@
                         <a class="nav-link js-scroll-trigger" href="index.html#service">
                             Services
                         </a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="index.html#portfolio">
                             Portfolio
                         </a>
                     </li>
 
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="index.html#pricing">
                             Pricing
                         </a>
-                    </li>
+                    </li> -->
                     <li class="nav-item ">
                         <a class="nav-link js-scroll-trigger" href="index.html#contact">
                             Contact
@@ -169,10 +169,10 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="footer-widget">
                         <!-- Brand -->
-                        <a href="#" class="footer-brand text-white">
+                        <!-- <a href="#" class="footer-brand text-white">
                             Coral
                         </a>
-                        <p>In expedita sapiente cumque enim dicta similique, animi adipisci quia et quo quod numquam, veniam eligendi reprehenderit .</p>
+                        <p>In expedita sapiente cumque enim dicta similique, animi adipisci quia et quo quod numquam, veniam eligendi reprehenderit .</p> -->
                     </div>
                 </div>
 
@@ -215,11 +215,11 @@
             </div>
             <!-- / .row -->
 
-            <div class="row justify-content-md-center footer-copy">
+            <!-- <div class="row justify-content-md-center footer-copy">
                 <div class="col-lg-8 col-md-6 col-sm-6 text-center">
                     <p class="lead text-white-50">&copy; Copyright Reserved to Themeturn | Design and Developed by Esrat </p>
                 </div>
-            </div>
+            </div> -->
         </div>
         <!-- / .container -->
     </footer>
@@ -235,7 +235,7 @@
     <script src="assets/js/ajax-contact.js"></script>
 
     <!-- Theme JS -->
-    <script src="assets/js/theme.min.js"></script>
+    <script src="assets/js/theme.js"></script>
 
 </body>
 
