--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             <!-- Brand -->
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <h2>Coral</h2>
+                <!-- <h2>Coral</h2> -->
             </a>
 
             <!-- Toggler -->
@@ -48,32 +48,32 @@
                             Home
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#feature">
                             Features
                         </a>
-                    </li>
-                    <li class="nav-item">
+                    </li> -->
+                    <!-- <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#about">
                             About
                         </a>
-                    </li>
-                    <li class="nav-item">
+                    </li> -->
+                    <!-- <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#service">
                             Services
                         </a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#portfolio">
                             Portfolio
                         </a>
                     </li>
 
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#pricing">
                             Pricing
                         </a>
-                    </li>
+                    </li> -->
                     <li class="nav-item ">
                         <a class="nav-link js-scroll-trigger" href="#contact">
                             Contact
@@ -91,7 +91,7 @@
     <section class="section section-top section-full">
 
         <!-- Cover -->
-        <div class="bg-cover" style="background-image: url(assets/img/56.jpg);"></div>
+        <div class="bg-cover" style="background-image: url(assets/img/heroimage6.jpg);"></div>
 
         <!-- Overlay -->
         <div class="bg-overlay"></div>
@@ -102,17 +102,17 @@
                     <div class="banner-content">
                         <!-- Preheading -->
                         <p class="text-white text-uppercase text-center text-xs">
-                            Meet <span>John Doe</span>
+                            Meet <span>Puyu Wu</span>
                         </p>
 
                         <!-- Heading -->
                         <h1 class="text-white text-center mb-4 display-4 font-weight-bold">
-                            I am a UI/UX Designer <br>& Developer
+                            I am a Developer <br>& Active AI Learner
                         </h1>
 
                         <!-- Subheading -->
                         <p class="lead text-white text-center mb-5">
-                            Having 3 years plus experience in design and develop area. I do html template conversion and wordpress theme development too. Have any project on mind or any query about project, feel free to contact.
+                            Having around 1.5 years experience in develop area. I do web development in front end and back end. Also a positive AI learner, keen on applying and optimizng machine learning algorithms on some real projects.
                         </p>
 
                         <!-- Button -->
@@ -136,26 +136,26 @@
 
     <!-- FEATURES
     ================================================== -->
-    <section class="section" id="feature">
+    <!-- <section class="section" id="feature">
         <div class="container">
             <div class="row justify-content-center mb-4">
-                <div class="col-md-8 col-lg-6 text-center">
+                <div class="col-md-8 col-lg-6 text-center"> -->
 
                     <!-- Heading -->
-                    <h2 class="lg-title mb-2">
+                    <!-- <h2 class="lg-title mb-2">
                         Why choose me?
-                    </h2>
+                    </h2> -->
 
                     <!-- Subheading -->
-                    <p class="mb-5 ">
+                    <!-- <p class="mb-5 ">
                         Industry Leading Managed Services and Staffing Solutions
                     </p>
 
                 </div>
-            </div>
+            </div> -->
             <!-- / .row -->
 
-            <div class="row justy-content-center">
+            <!-- <div class="row justy-content-center">
                 <div class="col-lg-3 col-md-6">
                     <div class="text-center feature-block">
                         <div class="feature-icon-block mb-4">
@@ -196,14 +196,14 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- / .container -->
-    </section>
+    <!-- </section> -->
 
 
     <!-- ABOUT
     ================================================== -->
-    <section class="section bg-light" id="about">
+    <!-- <section class="section bg-light" id="about">
         <div class="container">
             <div class="row ">
                 <div class="col-lg-6">
@@ -254,34 +254,34 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
 
 
     <!-- SERVICES
     ================================================== -->
-    <section class="section" id="service">
+    <!-- <section class="section" id="service"> -->
         <!-- Content -->
-        <div class="container">
+        <!-- <div class="container">
             <div class="row justify-content-center mb-4">
-                <div class="col-md-8 col-lg-7 text-center">
+                <div class="col-md-8 col-lg-7 text-center"> -->
 
                     <!-- Heading -->
-                    <h2 class="lg-title mb-2">
+                    <!-- <h2 class="lg-title mb-2">
                         My Key Services
-                    </h2>
+                    </h2> -->
 
                     <!-- Subheading -->
-                    <p class="mb-5">
+                    <!-- <p class="mb-5">
                         Industry Leading Managed Services and Staffing Solutions
                     </p>
 
                 </div>
-            </div>
+            </div>  -->
             <!-- / .row -->
 
 
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-lg-4 col-sm-6 col-md-6 mb-4 ">
                     <div class="service-block d-flex">
                         <div class="service-icon ">
@@ -352,7 +352,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- ABOUT
     ================================================== -->
@@ -448,26 +448,26 @@
 
     <!-- Pricing
     ================================================== -->
-    <section class="section" id="pricing">
+    <!-- <section class="section" id="pricing">
         <div class="container">
             <div class="row mb-4">
-                <div class="col-md-6 col-lg-4 ">
+                <div class="col-md-6 col-lg-4 "> -->
 
                     <!-- Heading -->
-                    <h2 class="lg-title mb-2 ">
-                        Affordable Pricing Plan
-                    </h2>
+                    <!-- <h2 class="lg-title mb-2 "> -->
+                        <!-- Affordable Pricing Plan
+                    </h2> -->
 
                     <!-- Subheading -->
-                    <p class="my-4 ">
+                    <!-- <p class="my-4 ">
                         No Need to worry about pricing plan. You may have your own custom pricing plan .
                     </p>
 
                     <a href="#contact" class="btn btn-primary">Contact Now</a>
                     <p class="text-primary mt-3">*Pricing plan may vary to work load</p>
-                </div>
+                </div> -->
 
-                <div class="col-lg-4 col-md-6 col-sm-6">
+                <!-- <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="pricing-block">
                         <h2>Basic plan</h2>
 
@@ -507,15 +507,15 @@
                         <a href="#" class="btn btn-outline-dark">Purchase now</a>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- / .row -->
-        </div>
-    </section>
+        <!-- </div> -->
+    <!-- </section> --> 
 
 
     <!-- Testimonial
     ================================================== -->
-    <section class="section bg-dark" id="testimonial">
+    <!-- <section class="section bg-dark" id="testimonial">
             <div class="carousel slide" id="review-slider" data-ride="carousel">
                <ol class="carousel-indicators">
                 <li data-target="#review-slider" data-slide-to="0" class="active"></li>
@@ -571,7 +571,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
 
     <!-- Contact
@@ -656,10 +656,10 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="footer-widget">
                         <!-- Brand -->
-                        <a href="#" class="footer-brand text-white">
+                        <!-- <a href="#" class="footer-brand text-white">
                             Coral
-                        </a>
-                        <p>In expedita sapiente cumque enim dicta similique, animi adipisci quia et quo quod numquam, veniam eligendi reprehenderit .</p>
+                        </a> -->
+                        <!-- <p>In expedita sapiente cumque enim dicta similique, animi adipisci quia et quo quod numquam, veniam eligendi reprehenderit .</p> -->
                     </div>
                 </div>
 
@@ -702,11 +702,11 @@
             </div>
             <!-- / .row -->
 
-            <div class="row justify-content-md-center footer-copy">
+            <!-- <div class="row justify-content-md-center footer-copy">
                 <div class="col-lg-8 col-md-6 col-sm-6 text-center">
                     <p class="lead text-white-50">&copy; Copyright Reserved to Themeturn | Design and Developed by Esrat </p>
                 </div>
-            </div>
+            </div> -->
         </div>
         <!-- / .container -->
     </footer>
