--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <meta name="description" content="Coral - Onepage portfolio Template">
-    <meta name="author" content="esrat">
+    <meta name="author" content="miffy">
 
     <!-- Fontawseom Icon CSS -->
     <link rel="stylesheet" href="assets/css/all.css">
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
 
-    <title>Coral-Onepage Portfolio Template</title>
+    <title>Puyu Wu Portfolio</title>
 </head>
 
 <body id="page-top">
@@ -74,11 +74,11 @@
                             Pricing
                         </a>
                     </li> -->
-                    <li class="nav-item ">
+                    <!-- <li class="nav-item ">
                         <a class="nav-link js-scroll-trigger" href="#contact">
                             Contact
                         </a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
             <!-- / .navbar-collapse -->
@@ -378,18 +378,18 @@
             <div class="row justify-content-center">
                 <div class="col-lg-4 col-md-6 col-sm-6 mb-5">
                     <div class="portfolio-block">
-                        <img src="assets/img/portfolio/43.png" alt="portfolio">
+                        <img src="assets/img/portfolio/bushfire-cover.jpg" alt="portfolio">
 
                         <div class="portfolio-content">
-                            <h4>Probiz-portfolio web template</h4>
-                            <span class="work-cat">Web Design</span>
+                            <h4>Bushfire Detector</h4>
+                            <span class="work-cat">Machine Learning</span>
                         </div>
                         <div class="overlay-content">
-                            <a href="single-portfolio.html"><i class="fa fa-link"></i></a>
+                            <a href="portfolio-bushfire.html"><i class="fa fa-link"></i></a>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-6 mb-5">
+                <!-- <div class="col-lg-4 col-md-6 col-sm-6 mb-5">
                     <div class="portfolio-block">
                         <img src="assets/img/portfolio/44.png" alt="portfolio">
 
@@ -440,7 +440,7 @@
                             <a href="single-portfolio.html"><i class="fa fa-link"></i></a>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
@@ -576,40 +576,40 @@
 
     <!-- Contact
     ================================================== -->
-    <section class="section" id="contact">
+    <!-- <section class="section" id="contact">
         <div class="container">
             <div class="row justify-content-center mb-4">
-                <div class="col-md-8 col-lg-8 text-center">
+                <div class="col-md-8 col-lg-8 text-center"> -->
 
-                    <!-- Heading -->
+                    <!-- Heading
                     <h2 class="lg-title mb-2">
                         Have any questions on mind?
-                    </h2>
+                    </h2> -->
 
                     <!-- Subheading -->
-                    <p class="mb-5">
+                    <!-- <p class="mb-5">
                         Our duty towards you is to share our experience we're reaching in our work path with you.
                     </p>
 
                 </div>
-            </div>
+            </div> -->
             <!-- / .row -->
 
 
-            <div class="row justify-content-center">
+<!--            <div class="row justify-content-center">
                 <div class="col-lg-8">
-                    <form action="mail.php" method="post" id="main_contact_form" class="contact__form">
+                    <form action="mail.php" method="post" id="main_contact_form" class="contact__form"> -->
                         <!-- form message -->
-                            <div class="row">
+<!--                            <div class="row">
                                 <div class="col-12">
                                     <div class="alert alert-success contact__msg" style="display: none" role="alert">
                                         Your message was sent successfully.
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- end message -->
                             
-                        <div class="row">
+<!--                        <div class="row">
                             <div class="col-lg-6">
                                 <div class="form-group">
                                     <input type="text" name="name" id="name" class="form-control" placeholder="Enter your Name">
@@ -644,7 +644,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
 
     <!-- FOOTER
@@ -663,10 +663,10 @@
                     </div>
                 </div>
 
-                <div class="col-lg-2 ml-lg-auto col-md-2">
+                <!-- <div class="col-lg-2 ml-lg-auto col-md-2"> -->
 
                     <!-- Links -->
-                    <ul class="footer-link list-unstyled ml-0 justify-content-end">
+                <!--    <ul class="footer-link list-unstyled ml-0 justify-content-end">
                         <li>
                             <a href="#" class="text-white">
                                 Services
@@ -683,11 +683,12 @@
                             </a>
                         </li>
                     </ul>
-                </div>
+                </div> -->
                 <div class="col-lg-3 col-md-4">
+<!-- todo: add links of contacts: linkedIn -->
 
                     <!-- Links -->
-                    <ul class="footer-link list-unstyled ml-0 justify-content-end">
+                    <!-- <ul class="footer-link list-unstyled ml-0 justify-content-end">
                         <li>
                             <i class="fa fa-mobile"></i> +345-345456
                         </li>
@@ -697,7 +698,7 @@
                         <li>
                             <i class="fa fa-globe"></i> www.themeturn.com
                         </li>
-                    </ul>
+                    </ul> -->
                 </div>
             </div>
             <!-- / .row -->
