changed bushfire video embedding code

--- a/portfolio-bushfire.html
+++ b/portfolio-bushfire.html
@@ -125,8 +125,7 @@
                 <div class="col-lg-8 col-md-12 col-sm-12">
                     <div class="portfolio-single">
                         <div class="large-image">
-                            <iframe src="https://youtu.be/pSV4ec1r3no"
-                            width="560" height="315" frameborder="0" allowfullscreen></iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/pSV4ec1r3no" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                         
                          <a href="#" class="btn btn-primary btn-block pt-4"> Live Demo</a>
