--- a/single-portfolio.html
+++ b/single-portfolio.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <meta name="description" content="Coral - Onepage portfolio Template">
-    <meta name="author" content="esrat">
+    <meta name="author" content="miffy">
 
     <!-- Fontawseom Icon CSS -->
     <link rel="stylesheet" href="assets/css/all.css">
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="shortcut icon" type="image/png" href="assets/img/favicon.png"/>
 
     <title>Puyu Wu Portfolio</title>
 </head>
