--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
 
+    <link rel="shortcut icon" type="image/png" href="assets/img/favicon.png"/>
+    <!-- <link rel="shortcut icon" type="image/png" href="http://example.com/favicon.png"/> -->
+
     <title>Puyu Wu Portfolio</title>
 </head>
 
