--- a/portfolio-bushfire.html
+++ b/portfolio-bushfire.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="shortcut icon" type="image/png" href="assets/img/favicon.png"/>
 
     <title>Puyu Wu Portfolio</title>
 </head>
@@ -103,7 +104,7 @@
 
                         <!-- Heading -->
                         <h1 class="text-white text-center mb-4 display-4">
-                            Bushfire
+                            Bushfire Detector
                         </h1>
 
                     </div>
@@ -125,7 +126,7 @@
                 <div class="col-lg-8 col-md-12 col-sm-12">
                     <div class="portfolio-single">
                         <div class="large-image">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/pSV4ec1r3no" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe max-width="560" height="315" src="https://www.youtube.com/embed/pSV4ec1r3no" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                         
                          <a href="#" class="btn btn-primary btn-block pt-4"> Live Demo</a>
