added one more portfolio page - closing time

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <link rel="stylesheet" href="assets/css/responsive.css">
 
     <link rel="shortcut icon" type="image/png" href="assets/img/favicon.png"/>
-    <!-- <link rel="shortcut icon" type="image/png" href="http://example.com/favicon.png"/> -->
 
     <title>Puyu Wu Portfolio</title>
 </head>
@@ -392,20 +391,20 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="col-lg-4 col-md-6 col-sm-6 mb-5">
+                <div class="col-lg-4 col-md-6 col-sm-6 mb-5">
                     <div class="portfolio-block">
-                        <img src="assets/img/portfolio/44.png" alt="portfolio">
+                        <img src="assets/img/portfolio/closingtime-cover.jpg" alt="portfolio">
 
                         <div class="portfolio-content">
                             <h4>Probiz-portfolio web template</h4>
-                            <span class="work-cat">Web Design</span>
+                            <span class="work-cat">Machine Learning</span>
                         </div>
                         <div class="overlay-content">
-                            <a href="single-portfolio.html"><i class="fa fa-link"></i></a>
+                            <a href="portfolio-closingtime.html"><i class="fa fa-link"></i></a>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-6 mb-5">
+                <!-- <div class="col-lg-4 col-md-6 col-sm-6 mb-5">
                     <div class="portfolio-block">
                         <img src="assets/img/portfolio/43.png" alt="portfolio">
 
