--- a/single-portfolio.html
+++ b/single-portfolio.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="stylesheet" href="assets/css/portfolio.css">
+
     <link rel="shortcut icon" type="image/png" href="assets/img/favicon.png"/>
 
     <title>Puyu Wu Portfolio</title>
@@ -135,7 +137,7 @@
                             <h2 class="portfolio-title">Probiz- Single portfolio Template</h2>
                             
                             <div class="project-meta">
-                                <span>By : Esrat</span>
+                                <span>By : Esrat</span>&nbsp;&nbsp;
                                 <span>Category : Portfolio</span>
                             </div>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium porro quos delectus inventore ipsam natus voluptatum assumenda, quam itaque. Laboriosam error, doloribus molestias natus eum consectetur, deserunt magnam ex doloremque!</p>
