minor change on bushfire portfolio

--- a/portfolio-bushfire.html
+++ b/portfolio-bushfire.html
@@ -138,7 +138,7 @@
                             <h2 class="portfolio-title">Bushfire - Carsales Hackathon - Oct 2018</h2>
                             
                             <div class="project-meta">
-                                <span>By : Carsales Bushfire Team</span>&nbsp;&nbsp;
+                                <span>By : Carsales Bushfire Hackathon Team</span>&nbsp;&nbsp;
                                 <span>Category : Machine Learning</span>
                             </div>
                             <p>During my participation in the Oct. 2018 Carsales Hackathon, I worked in a team to build an experimental system to detect bushfire via image and video resources. We used Python and TensorFlow were to build the object-detection ML model. Our project won the Oct 2018 Carsales Hackathon First Prize and also a Green Award.</p>                            
