deleted unused button on portfolio pages

--- a/portfolio-bushfire.html
+++ b/portfolio-bushfire.html
@@ -132,7 +132,7 @@
                                 <iframe class="resp-video-iframe" src="https://www.youtube.com/embed/pSV4ec1r3no" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </div>
                         </div>
-                         <a href="#" class="btn btn-primary btn-block pt-4"> Live Demo</a>
+                         <!-- <a href="#" class="btn btn-primary btn-block pt-4"> Live Demo</a> -->
                          
                         <div class="portfolio-details">
                             <h2 class="portfolio-title">Bushfire - Carsales Hackathon - Oct 2018</h2>
