--- a/portfolio-closingtime.html
+++ b/portfolio-closingtime.html
@@ -131,7 +131,7 @@
                             <img src="assets/img/portfolio/closingtime-whiteboard.jpg" alt="" class="img-fluid">
                         </div>
                         
-                         <a href="#" class="btn btn-primary btn-block pt-4"> Live Demo</a>
+                         <!-- <a href="#" class="btn btn-primary btn-block pt-4"> Live Demo</a> -->
                          
                         <div class="portfolio-details">
                             <h2 class="portfolio-title">Probiz- Single portfolio Template</h2>
