--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-4 col-md-6 col-sm-6 mb-5">
                     <div class="portfolio-block">
-                        <img src="assets/img/portfolio/bushfire-cover.jpg" alt="portfolio">
+                        <img class="portfolio-cover-img" src="assets/img/portfolio/bushfire-cover.jpg" alt="Bushfire Detector">
 
                         <div class="portfolio-content">
                             <h4>Bushfire Detector</h4>
@@ -393,10 +393,10 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6 mb-5">
                     <div class="portfolio-block">
-                        <img src="assets/img/portfolio/closingtime-cover.jpg" alt="portfolio">
+                        <img class="portfolio-cover-img" src="assets/img/portfolio/closingtime-cover.jpg" alt="Closing Time">
 
                         <div class="portfolio-content">
-                            <h4>Probiz-portfolio web template</h4>
+                            <h4>Closing Time</h4>
                             <span class="work-cat">Machine Learning</span>
                         </div>
                         <div class="overlay-content">
