update closing time page

--- a/portfolio-closingtime.html
+++ b/portfolio-closingtime.html
@@ -77,11 +77,11 @@
                             Pricing
                         </a>
                     </li> -->
-                    <li class="nav-item ">
+                    <!-- <li class="nav-item ">
                         <a class="nav-link js-scroll-trigger" href="index.html#contact">
                             Contact
                         </a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
             <!-- / .navbar-collapse -->
@@ -179,10 +179,10 @@
                     </div>
                 </div>
 
-                <div class="col-lg-2 ml-lg-auto col-md-2">
+                <!-- <div class="col-lg-2 ml-lg-auto col-md-2"> -->
 
                     <!-- Links -->
-                    <ul class="footer-link list-unstyled ml-0 justify-content-end">
+                    <!-- <ul class="footer-link list-unstyled ml-0 justify-content-end">
                         <li>
                             <a href="#" class="text-white">
                                 Services
@@ -200,10 +200,10 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-lg-3 col-md-4">
+                <div class="col-lg-3 col-md-4"> -->
 
                     <!-- Links -->
-                    <ul class="footer-link list-unstyled ml-0 justify-content-end">
+<!--                    <ul class="footer-link list-unstyled ml-0 justify-content-end">
                         <li>
                             <i class="fa fa-mobile"></i> +345-345456
                         </li>
@@ -214,8 +214,8 @@
                             <i class="fa fa-globe"></i> www.themeturn.com
                         </li>
                     </ul>
-                </div>
-            </div>
+                </div> 
+            </div> -->
             <!-- / .row -->
 
             <!-- <div class="row justify-content-md-center footer-copy">
